# MA_UG2025FALL_CS181MAD

./: README.md  evaluation.md  goals.md  pyproject.toml
data/: Steve Jobs Stanford Speech.docx  all_weapons_fortnite.csv  data.json  image_classifier_23.sqlite
docs/: 10-webscraping.ipynb  6.1-pandas-basics.ipynb  6.2-pandas-selection.ipynb  7-1-pandas-grouping.ipynb  7.2-pandas-apply.ipynb  8.1-pandas-merge.ipynb  9.1-sql-with-python.ipynb  9.2-sql-exercise-solved.ipynb
examples/: 7-list-in-function.ipynb
